[package]
name = "chainup-custody-sdk"
version = "1.1.0"
edition = "2021"
authors = ["ChainUp Custody"]
description = "ChainUp Custody Rust SDK for WaaS and MPC API operations"
license = "MIT"
repository = "https://github.com/HiCoinCom/rust-sdk"
keywords = ["chainup", "custody", "crypto", "wallet", "mpc"]
categories = ["api-bindings", "cryptography"]

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# RSA encryption
rsa = "0.9"
base64 = "0.21"
sha2 = { version = "0.10", features = ["oid"] }
md-5 = "0.10"

# 锁定 base64ct 版本以兼容 Cargo 1.80.x (避免 edition2024 问题)
base64ct = "=1.6.0"

# Async runtime
tokio = { version = "1", features = ["full"], optional = true }

# Error handling
thiserror = "1.0"

# URL encoding
urlencoding = "2.1"

# Decimal precision for financial amounts
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }

# Logging
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["blocking"]
blocking = []
async = ["tokio"]

[[example]]
name = "waas_example"
path = "examples/waas_example.rs"

[[example]]
name = "mpc_example"
path = "examples/mpc_example.rs"
